applications/workspaces/upstream/controller/components/istio/istio_inject_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspaces-controller
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow-workspaces
  labels:
    istio-injection: enabled
