applications/workspaces/upstream/controller/components/istio/manager_istio_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspaces-controller
spec:
  template:
    spec:
      containers:
      - name: manager
